# PortfolioPerformanceTaxes

./: .gitignore  CLAUDE.md  README.md  generate_thumbnail.py  plan.md  pptax.spec  pyproject.toml
.github/workflows/: build.yml
src/pptax/: __init__.py  __main__.py  config.py
src/pptax/data/: tax_parameters.json
src/pptax/engine/: bestandsschutz.py  fifo.py  freibetrag.py  kurs_utils.py  tax_params.py  verkauf.py  verlustverrechnung.py  vorabpauschale.py  vp_integration.py
src/pptax/export/: csv_export.py
src/pptax/gui/: __init__.py  dashboard_tab.py  freibetrag_tab.py  main_window.py  verkauf_tab.py  vorabpauschale_tab.py
src/pptax/models/: __init__.py  portfolio.py  tax.py
src/pptax/parser/: pp_xml_parser.py
tests/: conftest.py  test_bestandsschutz.py  test_csv_export.py  test_depot_filter.py  test_fifo.py  test_freibetrag.py  test_integration.py  test_kurs_utils.py  test_pp_xml_parser.py  test_tax_params.py  test_verkauf.py  test_verlustverrechnung.py  test_vorabpauschale.py  test_vp_integration.py
tests/test_data/: sample_portfolio.xml
